tailwind css & daisyui added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
     />
     <!-- external font link end -->
 
+    <!-- tailwind css & daisyui cdn link start -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.12/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- tailwind css & daisyui cdn link end -->
+
+    <!-- tailwind customize start -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
+    </script>
+    <!-- tailwind customize end -->
+
     <!-- external css link start -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- external css link end -->
