--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         theme: {
           extend: {
             colors: {
-              clifford: "#da373d",
+              "web-primary": "#FF5C00",
+              "web-black": "#000000",
             },
           },
         },
@@ -42,5 +43,75 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- external css link end -->
   </head>
-  <body></body>
+  <body>
+    <!-- header section start -->
+    <header class="container mx-auto">
+      <!-- nav section start -->
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div
+              tabindex="0"
+              role="button"
+              class="btn btn-ghost lg:hidden hover:bg-transparent hover:text-inherit"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow font-inter text-web-black text-lg font-medium"
+            >
+              <li><a>About Us</a></li>
+              <li><a>Services</a></li>
+              <li><a>Latest Work</a></li>
+              <li><a>Testmonials</a></li>
+            </ul>
+          </div>
+          <a
+            class="btn btn-ghost text-web-primary font-bold font-inter text-2xl hover:bg-white"
+            >Orange Digital Agency</a
+          >
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul
+            class="menu menu-horizontal px-1 font-inter text-web-black text-lg font-medium"
+          >
+            <li>
+              <a class="hover:bg-transparent hover:text-inherit">About Us</a>
+            </li>
+            <li>
+              <a class="hover:bg-transparent hover:text-inherit">Services</a>
+            </li>
+            <li>
+              <a class="hover:bg-transparent hover:text-inherit">Latest Work</a>
+            </li>
+            <li>
+              <a class="hover:bg-transparent hover:text-inherit">Testmonials</a>
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-end hover: bg-transparent">
+          <a
+            class="btn bg-web-primary hover:bg-web-primary text-white rounded-full shadow-none"
+            >Contact Us</a
+          >
+        </div>
+      </div>
+      <!-- nav section end -->
+    </header>
+    <!-- header section end -->
+  </body>
 </html>
