--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             colors: {
               "web-primary": "#FF5C00",
               "web-black": "#000000",
+              "web-gray": "#4F4F4F",
             },
           },
         },
@@ -111,6 +112,38 @@
         </div>
       </div>
       <!-- nav section end -->
+
+      <!-- banner section start -->
+      <div class="hero container mx-auto mt-32">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <img
+            src="images/banner-image.png"
+            alt="banner-img"
+            class="max-w-sm rounded-lg shadow-2xl"
+          />
+          <div class="mr-52">
+            <h1
+              class="font-bold leading-tight text-web-black font-rubik text-6xl"
+            >
+              Unlocking Digital <br />
+              Creativity in the Dark
+            </h1>
+            <p
+              class="py-6 text-web-gray font-rubik text-lg font-normal leading-7"
+            >
+              "Unlocking your brand's potential with data-driven <br />
+              strategies and compelling creativity for digital success."
+            </p>
+            <button class="btn bg-web-primary text-white">Our Services</button>
+            <button
+              class="btn bg-white border border-web-primary shadow-none text-web-primary hover:border-web-primary hover:bg-inherit"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- banner section end -->
     </header>
     <!-- header section end -->
   </body>
