--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <!-- nav section end -->
 
       <!-- banner section start -->
-      <div class="hero container mx-auto mt-32">
+      <div class="hero container mx-auto mt-32 mb-32">
         <div class="hero-content flex-col lg:flex-row-reverse">
           <img
             src="images/banner-image.png"
@@ -146,5 +146,129 @@
       <!-- banner section end -->
     </header>
     <!-- header section end -->
+
+    <!-- main section start -->
+    <main>
+      <!-- service section start -->
+      <section>
+        <h1
+          class="text-center text-web-black font-plus-jakarta text-[42px] font-bold"
+        >
+          Our Services
+        </h1>
+        <h2
+          class="text-center text-web-gray font-plus-jakarta text-lg font-normal"
+        >
+          Compelling creativity for digital success
+        </h2>
+
+        <div class="grid grid-cols-3 mt-[102px] ml-[240px]">
+          <div class="w-[300px] h-[270px]">
+            <img src="icon/seo.png" alt="seo-img" class="mx-auto" />
+            <h2
+              class="text-center text-web-black ont-plus-jakarta text-[21px] font-bold"
+            >
+              Search Engine Optimization
+            </h2>
+            <h3
+              class="text-center text-web-grey font-plus-jakarta text-base font-normal"
+            >
+              Boost your online visibility with our expert SEO strategies,
+              making your brand stand out in search engine results.
+            </h3>
+          </div>
+          <div class="w-[300px] h-[270px]">
+            <img
+              src="icon/social-media.png"
+              alt="social-media-img"
+              class="mx-auto"
+            />
+            <h2
+              class="text-center text-web-black ont-plus-jakarta text-[21px] font-bold"
+            >
+              Social Media Management
+            </h2>
+            <h3
+              class="text-center text-web-grey font-plus-jakarta text-base font-normal"
+            >
+              Drive engagement and brand loyalty through our dynamic social
+              media campaigns, designed to captivate your audience.
+            </h3>
+          </div>
+          <div class="w-[300px] h-[270px]">
+            <img
+              src="icon/content-making.png"
+              alt="content-making-img"
+              class="mx-auto"
+            />
+            <h2
+              class="text-center text-web-black ont-plus-jakarta text-[21px] font-bold"
+            >
+              Content Marketing
+            </h2>
+            <h3
+              class="text-center text-web-grey font-plus-jakarta text-base font-normal"
+            >
+              Elevate your content game with our captivating and SEO-friendly
+              content, designed to attract, educate, and convert your target
+              audience.
+            </h3>
+          </div>
+          <div class="w-[300px] h-[270px]">
+            <img
+              src="icon/advertising.png"
+              alt="advertising-img"
+              class="mx-auto"
+            />
+            <h2
+              class="text-center text-web-black ont-plus-jakarta text-[21px] font-bold"
+            >
+              Pay-Per-Click Advertising
+            </h2>
+            <h3
+              class="text-center text-web-grey font-plus-jakarta text-base font-normal"
+            >
+              Reach your audience at the right time with meticulously crafted
+              PPC campaigns that ensure maximum ROI.
+            </h3>
+          </div>
+          <div class="w-[300px] h-[270px]">
+            <img src="icon/email.png" alt="email-img" class="mx-auto" />
+            <h2
+              class="text-center text-web-black ont-plus-jakarta text-[21px] font-bold"
+            >
+              Email Marketing
+            </h2>
+            <h3
+              class="text-center text-web-grey font-plus-jakarta text-base font-normal"
+            >
+              Nurture your leads and build lasting relationships through
+              effective email marketing campaigns that drive conversions.
+            </h3>
+          </div>
+          <div class="w-[300px] h-[270px]">
+            <img
+              src="icon/web-design-development.png"
+              alt="web-design-development-img"
+              class="mx-auto"
+            />
+            <h2
+              class="text-center text-web-black ont-plus-jakarta text-[21px] font-bold"
+            >
+              Web Design and Development
+            </h2>
+            <h3
+              class="text-center text-web-grey font-plus-jakarta text-base font-normal"
+            >
+              Transform your website into a user-friendly powerhouse with our
+              creative design and development expertise, resulting in an
+              enhanced user experience and lead generation.
+            </h3>
+          </div>
+        </div>
+      </section>
+      <!-- service section end -->
+    </main>
+    <!-- main section end -->
   </body>
 </html>
