why choose added

--- a/index.html
+++ b/index.html
@@ -268,6 +268,41 @@
         </div>
       </section>
       <!-- service section end -->
+
+      <!-- why choose section start -->
+      <section>
+        <div class="hero container mx-auto mt-32 mb-32">
+          <div class="hero-content flex-col lg:flex-row-reverse">
+            <img
+              src="images/model.png"
+              alt="model-img"
+              class="max-w-sm rounded-lg"
+            />
+            <img src="images/revenue.png" alt="revenue-img" class="mt-[-30rem] mr-[-165px]">
+            <div class="mr-52">
+              <h1
+                class="font-bold leading-tight text-web-black font-rubik text-[40px]"
+              >
+                Why should you <br />
+                choose Our digital Acedemy
+              </h1>
+              <p
+                class="py-6 text-web-gray font-rubik text-lg font-normal leading-7"
+              >
+                "Choose us for results-driven marketing that combines creative
+                innovation with meticulous analysis, ensuring your brand's
+                digital triumph. We're dedicated to your success and tailor
+                strategies to meet your unique goals."
+              </p>
+              <button class="btn bg-web-primary text-white">
+                Contact Us
+              </button>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- why choose section end -->
     </main>
     <!-- main section end -->
   </body>
