--- a/index.html
+++ b/index.html
@@ -303,6 +303,84 @@
         </div>
       </section>
       <!-- why choose section end -->
+
+      <!-- portfolio section start -->
+       <section>
+        <h1
+          class="text-center text-web-black font-plus-jakarta text-[42px] font-bold"
+        >
+        Portfolio 
+        </h1>
+        <h2
+          class="text-center text-web-gray font-plus-jakarta text-lg font-normal"
+        >
+        We’ve done all the heavy lifting so you don’t have to — get all the data you need to launch and grow your business faster.        </h2>
+
+        <div class="hero container mx-auto mt-32 mb-32">
+          <div class="hero-content flex-col lg:flex-row-reverse">
+            <img
+              src="images/portfolio.png"
+              alt="portfolio-img"
+              class="max-w-sm rounded-lg shadow-2xl"
+            />
+            <div class="mr-52 grid grid-cols-2">
+              <div class="w-[264px] h-[168px]">
+                <h2
+                  class="text-center text-web-primary font-inter text-6xl font-semibold"
+                >
+                4,000+
+                </h2>
+                <h3
+                  class="text-center text-web-black font-inter text-lg font-medium mt-2"
+                >
+                Global customers
+                </h3>
+                <h3 class="text-center text-web-grey font-inter text-base font-normal">We’ve helped over 4,000 amazing global companies.</h3>
+              </div>
+              <div class="w-[264px] h-[168px] ml-11">
+                <h2
+                  class="text-center text-web-primary font-inter text-6xl font-semibold"
+                >
+                600%
+                </h2>
+                <h3
+                  class="text-center text-web-black font-inter text-lg font-medium mt-2"
+                >
+                Return on investment
+                </h3>
+                <h3 class="text-center text-web-grey font-inter text-base font-normal">Our customers have reported an average of ~600% ROI.</h3>
+              </div>
+              <div class="w-[264px] h-[168px]">
+                <h2
+                  class="text-center text-web-primary font-inter text-6xl font-semibold"
+                >
+                25+
+                </h2>
+                <h3
+                  class="text-center text-web-black font-inter text-lg font-medium mt-2"
+                >
+                Team Members
+                </h3>
+                <h3 class="text-center text-web-grey font-inter text-base font-normal">Our best has given always.</h3>
+              </div>
+              <div class="w-[264px] h-[168px] ml-11">
+                <h2
+                  class="text-center text-web-primary font-inter text-6xl font-semibold"
+                >
+                200+
+                </h2>
+                <h3
+                  class="text-center text-web-black font-inter text-lg font-medium mt-2"
+                >
+                5-star reviews
+                </h3>
+                <h3 class="text-center text-web-grey font-inter text-base font-normal">We’ve helped over 4,000 amazing global companies.</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+       </section>
+      <!-- portfolio section end -->
     </main>
     <!-- main section end -->
   </body>
