latest work added

--- a/index.html
+++ b/index.html
@@ -381,6 +381,55 @@
         </div>
        </section>
       <!-- portfolio section end -->
+       
+      <!-- latest work section start -->
+       <section class="container mx-auto">
+        <h1
+          class="text-center text-web-black font-plus-jakarta text-[42px] font-bold"
+        >
+        Our Latest Work
+        </h1>
+        <h2
+          class="text-center text-web-gray font-plus-jakarta text-lg font-normal"
+        >Last Three works</h2>
+
+        <div class="flex justify-around mt-[74px]">
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <figure>
+              <img
+                src="images/latest-work-1.png"
+                alt="latest-work-1" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-web-black font-manrope text-[20px] font-bold">Digital Dominance for zest.</h2>
+              <p class="text-web-gray text-base font-manrope font-normal">Elevating a traditional brand into the digital age: We executed a comprehensive digital transformation strategy, resulting in a 120% increase in online sales within six months.</p>
+            </div>
+          </div>
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <figure>
+              <img
+                src="images/latest-work-2.png"
+                alt="latest-work-2" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-web-black font-manrope text-[20px] font-bold"> Social Buzz for Baba Startup</h2>
+              <p class="text-web-gray text-base font-manrope font-normal">Fostering a strong online presence: Our strategic social media campaigns garnered a 250% growth in social engagement and a 30% rise in brand awareness.</p>
+            </div>
+          </div>
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <figure>
+              <img
+                src="images/latest-work-3.png"
+                alt="latest-work-3" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-web-black font-manrope text-[20px] font-bold">Revamped Web Experience for DEF Corporation</h2>
+              <p class="text-web-gray text-base font-manrope font-normal">Bringing an outdated website back to life: A complete website redesign led to a 45% boost in user engagement and a 20% improvement in conversion rates.</p>
+            </div>
+          </div>
+        </div>
+       </section>
+      <!-- latest work section end -->
     </main>
     <!-- main section end -->
   </body>
