--- a/index.html
+++ b/index.html
@@ -430,6 +430,60 @@
         </div>
        </section>
       <!-- latest work section end -->
+
+      <!-- team section start -->
+       <section class="mt-32">
+        <h1
+          class="text-center text-web-black font-plus-jakarta text-[42px] font-bold"
+        >Meet our team</h1>
+        <h2
+          class="text-center text-web-gray font-plus-jakarta text-lg font-normal"
+        >Our philosophy is simple — hire a team of diverse, passionate people and foster <br> a culture that empowers you to do you best work.</h2>
+
+        <div class="container grid grid-cols-4 mx-auto mt-16 ml-[305px]">
+          <div>
+            <img src="team/team-1.png" alt="team-1">
+            <h2 class="font-inter text-lg	font-medium text-web-black">Mohan</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">Founder & CEO</h3>
+          </div>
+          <div>
+            <img src="team/team-2.png" alt="team-2">
+            <h2 class="font-inter text-lg	font-medium text-web-black">Phoenix Baker</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">Marketing Manager</h3>
+          </div>
+          <div>
+            <img src="team/team-3.png" alt="team-3">
+            <h2 class="font-inter text-lg	font-medium text-web-black">Lana Steiner</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">Product Manager</h3>
+          </div>
+          <div>
+            <img src="team/team-4.png" alt="team-4">
+            <h2 class="font-inter text-lg	font-medium text-web-black">Demi Wilkinson</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">Frontend Developer</h3>
+          </div>
+          <div>
+            <img src="team/team-5.png" alt="team-5">
+            <h2 class="font-inter text-lg	font-medium text-web-black">Candice Wu</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">Backend Developer</h3>
+          </div>
+          <div>
+            <img src="team/team-6.png" alt="team-6">
+            <h2 class="font-inter text-lg	font-medium text-web-black">Natali Craig</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">Product Designer</h3>
+          </div>
+          <div>
+            <img src="team/team-7.png" alt="team-7">
+            <h2 class="font-inter text-lg	font-medium text-web-black">Drew Cano</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">UX Researcher</h3>
+          </div>
+          <div>
+            <img src="team/team-8.png" alt="team-8">
+            <h2 class="font-inter text-lg	font-medium text-web-black">Orlando Diggs</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">Customer Success</h3>
+          </div>
+        </div>
+       </section>
+      <!-- team section end -->
     </main>
     <!-- main section end -->
   </body>
