--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               "web-primary": "#FF5C00",
               "web-black": "#000000",
               "web-gray": "#4F4F4F",
+              "web-blue": "#2563EB",
             },
           },
         },
@@ -278,7 +279,11 @@
               alt="model-img"
               class="max-w-sm rounded-lg"
             />
-            <img src="images/revenue.png" alt="revenue-img" class="mt-[-30rem] mr-[-165px]">
+            <img
+              src="images/revenue.png"
+              alt="revenue-img"
+              class="mt-[-30rem] mr-[-165px]"
+            />
             <div class="mr-52">
               <h1
                 class="font-bold leading-tight text-web-black font-rubik text-[40px]"
@@ -294,10 +299,7 @@
                 digital triumph. We're dedicated to your success and tailor
                 strategies to meet your unique goals."
               </p>
-              <button class="btn bg-web-primary text-white">
-                Contact Us
-              </button>
-              </button>
+              <button class="btn bg-web-primary text-white">Contact Us</button>
             </div>
           </div>
         </div>
@@ -305,16 +307,18 @@
       <!-- why choose section end -->
 
       <!-- portfolio section start -->
-       <section>
+      <section>
         <h1
           class="text-center text-web-black font-plus-jakarta text-[42px] font-bold"
         >
-        Portfolio 
+          Portfolio
         </h1>
         <h2
           class="text-center text-web-gray font-plus-jakarta text-lg font-normal"
         >
-        We’ve done all the heavy lifting so you don’t have to — get all the data you need to launch and grow your business faster.        </h2>
+          We’ve done all the heavy lifting so you don’t have to — get all the
+          data you need to launch and grow your business faster.
+        </h2>
 
         <div class="hero container mx-auto mt-32 mb-32">
           <div class="hero-content flex-col lg:flex-row-reverse">
@@ -328,162 +332,276 @@
                 <h2
                   class="text-center text-web-primary font-inter text-6xl font-semibold"
                 >
-                4,000+
+                  4,000+
                 </h2>
                 <h3
                   class="text-center text-web-black font-inter text-lg font-medium mt-2"
                 >
-                Global customers
+                  Global customers
                 </h3>
-                <h3 class="text-center text-web-grey font-inter text-base font-normal">We’ve helped over 4,000 amazing global companies.</h3>
+                <h3
+                  class="text-center text-web-grey font-inter text-base font-normal"
+                >
+                  We’ve helped over 4,000 amazing global companies.
+                </h3>
               </div>
               <div class="w-[264px] h-[168px] ml-11">
                 <h2
                   class="text-center text-web-primary font-inter text-6xl font-semibold"
                 >
-                600%
+                  600%
                 </h2>
                 <h3
                   class="text-center text-web-black font-inter text-lg font-medium mt-2"
                 >
-                Return on investment
+                  Return on investment
                 </h3>
-                <h3 class="text-center text-web-grey font-inter text-base font-normal">Our customers have reported an average of ~600% ROI.</h3>
+                <h3
+                  class="text-center text-web-grey font-inter text-base font-normal"
+                >
+                  Our customers have reported an average of ~600% ROI.
+                </h3>
               </div>
               <div class="w-[264px] h-[168px]">
                 <h2
                   class="text-center text-web-primary font-inter text-6xl font-semibold"
                 >
-                25+
+                  25+
                 </h2>
                 <h3
                   class="text-center text-web-black font-inter text-lg font-medium mt-2"
                 >
-                Team Members
+                  Team Members
                 </h3>
-                <h3 class="text-center text-web-grey font-inter text-base font-normal">Our best has given always.</h3>
+                <h3
+                  class="text-center text-web-grey font-inter text-base font-normal"
+                >
+                  Our best has given always.
+                </h3>
               </div>
               <div class="w-[264px] h-[168px] ml-11">
                 <h2
                   class="text-center text-web-primary font-inter text-6xl font-semibold"
                 >
-                200+
+                  200+
                 </h2>
                 <h3
                   class="text-center text-web-black font-inter text-lg font-medium mt-2"
                 >
-                5-star reviews
+                  5-star reviews
                 </h3>
-                <h3 class="text-center text-web-grey font-inter text-base font-normal">We’ve helped over 4,000 amazing global companies.</h3>
+                <h3
+                  class="text-center text-web-grey font-inter text-base font-normal"
+                >
+                  We’ve helped over 4,000 amazing global companies.
+                </h3>
               </div>
             </div>
           </div>
         </div>
-       </section>
+      </section>
       <!-- portfolio section end -->
-       
+
       <!-- latest work section start -->
-       <section class="container mx-auto">
+      <section class="container mx-auto">
         <h1
           class="text-center text-web-black font-plus-jakarta text-[42px] font-bold"
         >
-        Our Latest Work
+          Our Latest Work
         </h1>
         <h2
           class="text-center text-web-gray font-plus-jakarta text-lg font-normal"
-        >Last Three works</h2>
+        >
+          Last Three works
+        </h2>
 
         <div class="flex justify-around mt-[74px]">
           <div class="card bg-base-100 w-96 shadow-xl">
             <figure>
-              <img
-                src="images/latest-work-1.png"
-                alt="latest-work-1" />
+              <img src="images/latest-work-1.png" alt="latest-work-1" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title text-web-black font-manrope text-[20px] font-bold">Digital Dominance for zest.</h2>
-              <p class="text-web-gray text-base font-manrope font-normal">Elevating a traditional brand into the digital age: We executed a comprehensive digital transformation strategy, resulting in a 120% increase in online sales within six months.</p>
+              <h2
+                class="card-title text-web-black font-manrope text-[20px] font-bold"
+              >
+                Digital Dominance for zest.
+              </h2>
+              <p class="text-web-gray text-base font-manrope font-normal">
+                Elevating a traditional brand into the digital age: We executed
+                a comprehensive digital transformation strategy, resulting in a
+                120% increase in online sales within six months.
+              </p>
             </div>
           </div>
           <div class="card bg-base-100 w-96 shadow-xl">
             <figure>
-              <img
-                src="images/latest-work-2.png"
-                alt="latest-work-2" />
+              <img src="images/latest-work-2.png" alt="latest-work-2" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title text-web-black font-manrope text-[20px] font-bold"> Social Buzz for Baba Startup</h2>
-              <p class="text-web-gray text-base font-manrope font-normal">Fostering a strong online presence: Our strategic social media campaigns garnered a 250% growth in social engagement and a 30% rise in brand awareness.</p>
+              <h2
+                class="card-title text-web-black font-manrope text-[20px] font-bold"
+              >
+                Social Buzz for Baba Startup
+              </h2>
+              <p class="text-web-gray text-base font-manrope font-normal">
+                Fostering a strong online presence: Our strategic social media
+                campaigns garnered a 250% growth in social engagement and a 30%
+                rise in brand awareness.
+              </p>
             </div>
           </div>
           <div class="card bg-base-100 w-96 shadow-xl">
             <figure>
-              <img
-                src="images/latest-work-3.png"
-                alt="latest-work-3" />
+              <img src="images/latest-work-3.png" alt="latest-work-3" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title text-web-black font-manrope text-[20px] font-bold">Revamped Web Experience for DEF Corporation</h2>
-              <p class="text-web-gray text-base font-manrope font-normal">Bringing an outdated website back to life: A complete website redesign led to a 45% boost in user engagement and a 20% improvement in conversion rates.</p>
+              <h2
+                class="card-title text-web-black font-manrope text-[20px] font-bold"
+              >
+                Revamped Web Experience for DEF Corporation
+              </h2>
+              <p class="text-web-gray text-base font-manrope font-normal">
+                Bringing an outdated website back to life: A complete website
+                redesign led to a 45% boost in user engagement and a 20%
+                improvement in conversion rates.
+              </p>
             </div>
           </div>
         </div>
-       </section>
+      </section>
       <!-- latest work section end -->
 
       <!-- team section start -->
-       <section class="mt-32">
+      <section class="mt-32">
         <h1
           class="text-center text-web-black font-plus-jakarta text-[42px] font-bold"
-        >Meet our team</h1>
+        >
+          Meet our team
+        </h1>
         <h2
           class="text-center text-web-gray font-plus-jakarta text-lg font-normal"
-        >Our philosophy is simple — hire a team of diverse, passionate people and foster <br> a culture that empowers you to do you best work.</h2>
+        >
+          Our philosophy is simple — hire a team of diverse, passionate people
+          and foster <br />
+          a culture that empowers you to do you best work.
+        </h2>
 
         <div class="container grid grid-cols-4 mx-auto mt-16 ml-[305px]">
           <div>
-            <img src="team/team-1.png" alt="team-1">
-            <h2 class="font-inter text-lg	font-medium text-web-black">Mohan</h2>
-            <h3 class="font-inter text-web-primary text-base font-normal">Founder & CEO</h3>
+            <img src="team/team-1.png" alt="team-1" />
+            <h2 class="font-inter text-lg font-medium text-web-black">Mohan</h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">
+              Founder & CEO
+            </h3>
           </div>
           <div>
-            <img src="team/team-2.png" alt="team-2">
-            <h2 class="font-inter text-lg	font-medium text-web-black">Phoenix Baker</h2>
-            <h3 class="font-inter text-web-primary text-base font-normal">Marketing Manager</h3>
+            <img src="team/team-2.png" alt="team-2" />
+            <h2 class="font-inter text-lg font-medium text-web-black">
+              Phoenix Baker
+            </h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">
+              Marketing Manager
+            </h3>
           </div>
           <div>
-            <img src="team/team-3.png" alt="team-3">
-            <h2 class="font-inter text-lg	font-medium text-web-black">Lana Steiner</h2>
-            <h3 class="font-inter text-web-primary text-base font-normal">Product Manager</h3>
+            <img src="team/team-3.png" alt="team-3" />
+            <h2 class="font-inter text-lg font-medium text-web-black">
+              Lana Steiner
+            </h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">
+              Product Manager
+            </h3>
           </div>
           <div>
-            <img src="team/team-4.png" alt="team-4">
-            <h2 class="font-inter text-lg	font-medium text-web-black">Demi Wilkinson</h2>
-            <h3 class="font-inter text-web-primary text-base font-normal">Frontend Developer</h3>
+            <img src="team/team-4.png" alt="team-4" />
+            <h2 class="font-inter text-lg font-medium text-web-black">
+              Demi Wilkinson
+            </h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">
+              Frontend Developer
+            </h3>
           </div>
           <div>
-            <img src="team/team-5.png" alt="team-5">
-            <h2 class="font-inter text-lg	font-medium text-web-black">Candice Wu</h2>
-            <h3 class="font-inter text-web-primary text-base font-normal">Backend Developer</h3>
+            <img src="team/team-5.png" alt="team-5" />
+            <h2 class="font-inter text-lg font-medium text-web-black">
+              Candice Wu
+            </h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">
+              Backend Developer
+            </h3>
           </div>
           <div>
-            <img src="team/team-6.png" alt="team-6">
-            <h2 class="font-inter text-lg	font-medium text-web-black">Natali Craig</h2>
-            <h3 class="font-inter text-web-primary text-base font-normal">Product Designer</h3>
+            <img src="team/team-6.png" alt="team-6" />
+            <h2 class="font-inter text-lg font-medium text-web-black">
+              Natali Craig
+            </h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">
+              Product Designer
+            </h3>
           </div>
           <div>
-            <img src="team/team-7.png" alt="team-7">
-            <h2 class="font-inter text-lg	font-medium text-web-black">Drew Cano</h2>
-            <h3 class="font-inter text-web-primary text-base font-normal">UX Researcher</h3>
+            <img src="team/team-7.png" alt="team-7" />
+            <h2 class="font-inter text-lg font-medium text-web-black">
+              Drew Cano
+            </h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">
+              UX Researcher
+            </h3>
           </div>
           <div>
-            <img src="team/team-8.png" alt="team-8">
-            <h2 class="font-inter text-lg	font-medium text-web-black">Orlando Diggs</h2>
-            <h3 class="font-inter text-web-primary text-base font-normal">Customer Success</h3>
+            <img src="team/team-8.png" alt="team-8" />
+            <h2 class="font-inter text-lg font-medium text-web-black">
+              Orlando Diggs
+            </h2>
+            <h3 class="font-inter text-web-primary text-base font-normal">
+              Customer Success
+            </h3>
           </div>
         </div>
-       </section>
+      </section>
       <!-- team section end -->
+
+      <!-- testimonials section start -->
+      <section class="mt-32">
+        <h1
+          class="text-center text-web-black font-plus-jakarta text-[42px] font-bold"
+        >
+          Testimonials
+        </h1>
+        <h2
+          class="text-center text-web-gray font-plus-jakarta text-lg font-normal"
+        >
+          Happy Customers
+        </h2>
+
+        <div class="hero container mx-auto mt-7 mb-32">
+          <div class="hero-content flex-col lg:flex-row-reverse">
+            <img
+              src="images/testimonials.png"
+              alt="testimonials"
+              class="max-w-sm rounded-lg"
+            />
+            <div class="mr-52">
+              <h1
+                class="font-medium leading-tight text-web-black font-poppins text-[28px]"
+              >
+                Working with
+                <span class="text-web-primary">Orange Digital Agency</span> was
+                a game-changer for us. Their expertise in digital marketing made
+                our brand stand out in a crowded marketplace. We saw a
+                significant increase in our online visibility and conversion
+                rates."
+              </h1>
+              <p
+                class="py-6 text-web-blue font-rubik text-lg font-normal leading-7"
+              >
+                Read Success Story
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- testimonials section end -->
     </main>
     <!-- main section end -->
   </body>
